# pyPodPro

./: .gitignore  README.md  main.py  pyproject.toml
Hardware/: README.md
app/src/: main.py
app/src/models/: README.md  main_window.py  menu.py  menu_struct.py  pypod_menu.py  server.py  ui.py
app/src/services/: discovery.py  jellyfin_client.py
app/src/ui/: main_window.ui  menu_element.ui
app/src/views/: cli.py  connect_to_jellyfin.py
hardware_resources/: README.md
hardware_resources/CM4/: README.md
hardware_resources/CM4/rpi-cm4-demo-carrier/: fp-lib-table  rpi-cm4-demo-carrier.kicad_prl  rpi-cm4-demo-carrier.kicad_pro  rpi-cm4-demo-carrier.xml  sym-lib-table
hardware_resources/CM4/rpi-cm4-demo-carrier/gerbers/: rpi-cm4-demo-carrier-B_Cu.gbl  rpi-cm4-demo-carrier-B_Mask.gbs  rpi-cm4-demo-carrier-B_Paste.gbp  (+7 more)
hardware_resources/components/BQ25895RTWR/: BQ25895RTWR.kicad_sym  QFN50P400X400X80-25N.kicad_mod
hardware_resources/components/TPS22918DBVR/: SOT95P280X145-6N.kicad_mod  TPS22918DBVR.kicad_sym
hardware_resources/components/TPS61165DRVRG4/: SON65P200X200X80-7N.kicad_mod  TPS61165DRVRG4.kicad_sym
hardware_resources/footprints.pretty/: README.md
hardware_resources/pyPodPro_Prototype/: fp-info-cache  fp-lib-table  pyPodPro_Prototype.kicad_prl  pyPodPro_Prototype.kicad_pro  pyPodPro_Prototype.kicad_sch
hardware_resources/rpi-cm4-testcarrier/: rpi-cm4-testcarrier.kicad_prl  rpi-cm4-testcarrier.kicad_pro  rpi-cm4-testcarrier.kicad_sch
hardware_resources/stp_files/: README.md  SOT-23-5_MC_MCH.step  display_connector_FH23-45S-0.3SHAW.stp
